fix(modal): fixed z-index

--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -7,4 +7,5 @@
   background-color: #000;
   opacity: .6;
   overflow: hidden;
+  z-index: 1000;
 }
